--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,54 @@
 }
 
 
+.carousel-item {
+    max-height: 70vh;
+    
+}
+
+/*Background para facilitar leitura do texto do carrosel*/
+.carousel-caption.d-none.d-md-block {
+    background-color: rgba(255, 255, 255, 0.5) !important;
+}
+
+.my-container {
+    text-align: center;
+}
+
+.botao-emprestimo{
+    text-decoration: none;
+    color: purple;
+    text-align: center !important;
+    margin-top: 3vh;
+    margin-bottom: 3vh;
+    width: 60vw;
+    height: 10vh;
+    transition: 0.7s;
+}
+
+.botao-emprestimo a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.botao-emprestimo:hover {
+    font-size: calc(1.325rem + 1.2vw)!important;
+    color: black;
+}
+
+/* Evitar problema de texto sair do botão*/
+@media screen and (max-width:560px){
+    .botao-emprestimo{
+        font-size: calc(1.0rem + 0.01vw)!important;
+        transition: .7s;
+    }
+
+    .botao-emprestimo:hover {
+        font-size: calc(1.0rem + 0.01vw)!important;
+        color: white;
+    }
+}
+
 /* Rodapé */
 .footer-content {
     min-height: 5vh;
